--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "vite": "^2.4.4"
   },
   "dependencies": {
-    "dat.gui": "^0.7.7"
+    "dat.gui": "^0.7.7",
+    "gsap": "^3.7.1",
+    "three": "^0.131.3"
   }
 }
